@@ -39,7 +39,7 @@ Import-Package: com.openexchange.config,
  com.sun.xml.internal.ws.streaming,
  com.sun.xml.internal.ws.transport,
  com.sun.xml.internal.ws.util,
- javax.activation;version="1.1.0",
+ javax.activation,
  javax.annotation,
  javax.annotation.processing,
  javax.crypto,
